# zotero-assistant

backend/: .gitignore  _config.toml  database.py  llm.py  main.py  pyproject.toml  zotero.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue
frontend/src/router/: index.ts
frontend/src/views/: FullTextSearch.vue  Home.vue  LLMQA.vue  SemanticSearch.vue
