[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "llama-index>=0.13.3",
    "openai>=1.102.0",
    "scalar-fastapi>=1.3.0",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 120
